assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bayon&display=swap');

body {
  background-color: rgb(81, 13, 145);
  background-image: url(/assets/images/background-image-needles.jpg);
  background-size: no-repeat; 

}
/*Styling for the title header */

.main-page-header {
  background-image: url(/assets/images/blue-forest-2.jpeg);
  background-size: cover; /* Stretch to cover without blurring */
  background-repeat: no-repeat;
  background-position: center; /* Center the image horizontally and vertically */
  text-align: center;
  font-family: 'Bungee Spice', cursive;
  font-size: 30px;
  border: 4px solid #db2323;
  border-style: double;
}


/* Styling for the Main Navigation Bar across site */

.main-nav {
  margin: 0;
  padding: 0;
  display: flex; 
  justify-content: center; 
  align-items: center;
  height: 10vh; 
  background-color: rgb(81, 13, 145); 
  font-size: 50px;
  font-family: 'Passion One', cursive;

}

.main-nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex; 
}

.main-nav li {
  margin-right: 20px; 
}

.main-nav a {
  display: block;
  color: #fcfcfc;
  text-decoration: none;
  padding: 10px; 
}

.main-nav a:hover {
  background-color:rgb(223, 53, 15)
}

/* Styling for the Homepage image and text boxes */


.container {
  font-size: 50px;
  font-family: 'Passion One', cursive ;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  max-width: 1200px;
  margin: 0 auto;
  padding: 10px;
}

.box {
  flex-basis: calc(50% - 20px);
  margin-bottom: 20px;
  background-color: #f8f8f8;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  box-sizing: border-box; /* Add this to include padding in the width */
}

img {
  max-width: 100%;
  height: auto;
  border-radius: 8px;
  margin-bottom: 10px;
}

p {
  line-height: 1.6;
}

/* Styles for meditation page */

.meditation-page-header {
  background-image: url(/assets/images/blue-forest-2.jpeg);
  background-size: cover; /* Stretch to cover without blurring */
  background-repeat: no-repeat;
  background-position: center; /* Center the image horizontally and vertically */
  text-align: center;
  font-family: 'Bungee Spice', cursive;
  font-size: 30px;
  border: 4px solid #db2323;
  border-style: double;
}

/* STYLING FOR THE MEDITATION PAGE TIMER*/

.timer-container {
  text-align: center;
  font-family: 'Passion One', cursive ;
}

.timer-display {
  font-size: 48px;
  font-family: 'Passion One', cursive;
  color: #007bff; 
  margin-bottom: 20px;
}

.timer-container button {
  font-size: 30px;
  font-family: 'Passion One', cursive;
  padding: 10px 20px;
  margin: 5px;
  background-color: #0e0ed4; 
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.timer-container button:hover {
  background-color: #0056b3; 
}

/* Styling for the timer messages */
.message {
  background-image: url(/assets/images/stones-water.jpeg);
  background-repeat: no-repeat;
  background-size: cover;
  font-size: 60px;
  font-family: 'Bayon', sans-serif;
  text-align: center;
  margin: 20px 0;
  color: #333;
  font-weight: bold;
}

/*STYLING FOR MEDITATION PAGE*/

.meditation-paragraph {
  font-family: 'Passion One', cursive;
  font-size: 30px;
  padding-top: 5%;
  padding-left: 3%;
  padding-right: 3%;
  text-align: center;
}

/*STYLING FOR THE CONTACTS PAGE------------*/

.contact-page-header {
  background-image: url(/assets/images/blue-forest-2.jpeg);
  background-size: cover; /* Stretch to cover without blurring */
  background-repeat: no-repeat;
  background-position: center; /* Center the image horizontally and vertically */
  text-align: center;
  font-family: 'Bungee Spice', cursive;
  font-size: 30px;
  border: 4px solid #db2323;
  border-style: double;
}

/* Styling for the map container */

#map {
  width: 40%;
  height: 420px;
  background-color: rgb(69, 29, 201);
  margin: 0 auto; /* Center horizontally */
  display: flex;
  justify-content: center; /* Center vertically */
  align-items: center; /* Center vertically */
  padding: 10px; /* Add padding around the map container */
}



/* styles for contact form */
body {
  margin: 0;
  font-family: 'Passion One', cursive;
}

.contact-menu {
  position: fixed;
  left: 0;
  top: 0;
  background-color: #007BFF;
  color: #fff;
  width: 200px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.menu-item {
  padding: 10px;
  cursor: pointer;
  display: flex;
  align-items: center;
}

.menu-item i {
  margin-right: 10px;
}

.content {
  display: none;
  padding: 20px;
  margin-left: 220px; /* To create space for the menu */
  background-color: #f0f0f0;
  min-height: 100vh;
}


/* STYLING FOR THE FOOTER */

/* Footer Styling */
.main-footer {
  font-family: 'Passion One', cursive;
  background-color: #f0f0f0;
  padding: 5px 5px;
  text-align: center;
  bottom: 0;
  width: 100%;
  opacity: 0.8;
}

.social-links {
  margin-bottom: 10px;
}

.social-link {
  font-size: 24px;
  color: #333;
  margin: 0 10px;
  text-decoration: none;
}

/* Adjust the copyright text */
.main-footer p {
  font-size: 14px;
  color: #666;
}

